--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -52,6 +52,7 @@
             <ol>
                 <li>{{ customDate | date:'long':'GMT-6' }}</li>
                 <li>{{ customDate | date:'long':'GMT-4' }}</li>
+                <li>{{ customDate | date:'long':'GMT-2' }}</li>
             </ol>
         </p-card>
     </div>
