--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -35,6 +35,9 @@
             <ol>
                 <li> fecha | date:'long':'GMT-6'</li>
                 <li> fecha | date:'long':'GMT-4'</li>
+                <li> fecha | date:'long':'':'es-CH'</li>
+                <li> fecha | date:'long':'':'en-US'</li>
+                <li> fecha | date:'long':'':'fr-CA'</li>
             </ol>
         </p-card>
     </div>
@@ -53,6 +56,9 @@
                 <li>{{ customDate | date:'long':'GMT-6' }}</li>
                 <li>{{ customDate | date:'long':'GMT-4' }}</li>
                 <li>{{ customDate | date:'long':'GMT-2' }}</li>
+                <li>{{ customDate | date:'long':'':'es-CL' }}</li>
+                <li>{{ customDate | date:'long':'':'en-US' }}</li>
+                <li>{{ customDate | date:'long':'':'fr-CA' }}</li>
             </ol>
         </p-card>
     </div>
