--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,88 @@
-<p>uncommon-page works!</p>
+<p-panel header="Pipes no tan comunes"  class="p-1">
+    <p>
+        Pipes incluídos en Angular - Usualmente en el Common Module
+    </p>
+</p-panel>
+
+<div class="grid">
+    <div class="col-12 md:col-6">
+       <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+
+            <p>
+                Saludos {{ name }}, es un plcer {{ gender | i18nSelect:invitationMap  }} <!-- Basado en el genero va a la función para cambiar -->
+                a nuestro evento. 
+            </p>
+
+            <p-button
+                (click)="changeCLient()"
+                label="Cambiar la persona"
+            >
+            </p-button>
+         
+
+       </p-fieldset>     
+    </div>
+
+    <div class="col-12 md:col-6">
+       <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+
+        <p>
+           Actualmente {{ clientes.length | i18nPlural:clientMap }}
+        </p>
+
+        <p-button
+            (click)="deleteClient()"
+            label="Borrar Cliente"
+        ></p-button>
+
+       </p-fieldset>     
+    </div>
+
+    <div class="col-12 md:col-6">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+            <b>Original</b>
+            <pre> {{ clientes }}  </pre>
+
+            <b>Slice:0:2</b>
+            <pre> {{ clientes | slice:0:2}}  </pre>
+
+            <b>Slice:1:2</b>
+            <pre> {{ clientes | slice:1:2}}  </pre>
+
+            <b>Slice:0-2</b>
+            <pre> {{ clientes | slice:0:-2}}  </pre>
+
+        </p-fieldset>     
+     </div>
+
+     <div class="col-12 md:col-6">
+        <p-fieldset legend="Json Pipe" [toggleable]="true">
+            <pre> {{ person | json }} </pre>
+        </p-fieldset>     
+     </div>
+
+     <div class="col-12 md:col-6">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+            
+            <ul>
+                <li *ngFor="let item of person | keyvalue">
+                    <b> {{ item.key | titlecase }}: </b> {{ item.value }}
+                </li>
+            </ul>
+
+        </p-fieldset>     
+     </div>
+
+     <div class="col-12 md:col-6">
+        <p-fieldset legend="Async Pipe" [toggleable]="true">
+            
+            <pre *ngIf="!(myObservableTimer | async)"> Resolviendo observable</pre>
+            <pre> {{ myObservableTimer | async }} </pre>
+
+            <pre *ngIf="!(promiseValue | async)"> Resolviendo promesa</pre>
+            <pre> {{ promiseValue | async }} </pre>
+
+        </p-fieldset>     
+     </div>
+    
+</div>
